Fix button height (it was stretched vertically)
Added align-items to .left and .right to fix button height

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -21,7 +21,7 @@ body {
 .left,
 .right {
   display: flex;
-  justify-content: space-evenly;
+  align-items: center;
   gap: 16px;
 }
 
@@ -56,4 +56,9 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 16px;
+  margin: 0px;
+  padding: 0px;
+  align-items: center;
 }
